--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
